イベント参加者の取得用エンドポイントを追加
